# robot-vlp

./: .gitignore  Makefile  README.md  main.fdb_latexmk  main.fls  pyproject.toml  requirements.txt  rnn_checkpoints.weights.h5
data/interim/: navigation_paths.pkl
docs/: mkdocs.yml  scratchpad.txt
docs/docs/: index.md
esp code/esp8266_serial_repeater/: esp8266_serial_repeater.ino
esp code/esp_serial_repeater/: esp_serial_repeater.ino
esp code/robot_code/: robot_code.ino
esp code/robot_encoders/: robot_encoders.ino
esp code/robot_speed_control/: robot_speed_control.ino
esp code/sketch_nov21b/: sketch_nov21b.ino
esp code/vlp_read/: vlp_read.ino
models/: default_rnn.keras  exp_vive_trained.keras  exp_vive_trained_heading.keras  exp_vive_trained_position.keras  exp_vive_trained_rnn.keras  model_01.keras  model_02.keras  model_03.keras  odometer_trained_rnn.keras
models/navigation_neural_nets/: rnn.keras
models/vlp/: vlp_models  vlp_models.pkl
notebooks/exploratory/: EKF_tuning.ipynb  MLP-model_test.ipynb  RNN_model_test.ipynb  RNN_parameter_tuning.ipynb  Translation derivation 1.ipynb  cnc.py  cnc_data_exploration.ipynb  cnc_fingerprint.csv  cnc_fingerprint_2.csv  cnc_fingerprint_2_cal.csv  cnc_fingerprint_4.csv  cnc_fingerprint_4_cal.csv  cnc_fingerprint_cal.csv  config.json  council.ipynb  data_log.csv  ekf_capture_rotate_180.csv  ekf_capture_trans.csv  ekf_capture_trans_and_rotate.csv  ekf_catputre_rotate.csv  ekf_ccw_spiral_in_out_run.csv  ekf_cw_spiral_in_out_run.csv  ekf_eight_run.csv  (+105 more)
robot_vlp/: __init__.py  config.py  features.py  robot.py
(+331 files in other folders)
